# redlabel

./: .gitignore  BUILD_ON_MACOS.md  FOR_END_USERS.txt  Makefile  README.md  WINDOWS_BUILD.md  YOLO_FEATURES.md  build_resources.py  build_windows.bat  build_windows_exe.py  labelImg.py  pyproject.toml  redlabel.py  redlabel.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-windows.yml  release.yml
data/: dims.txt  predefined_classes.txt
gui/: __init__.py  main_window_actions.py  main_window_canvas.py  main_window_core.py  main_window_file_ops.py  main_window_ui.py  main_window_yolo.py
libs/: constants.py  settings.py  shape.py  yolo_inference.py  yolo_io.py
tests/: test_qt.py
