[metadata]
name = redlabel
description = RedLabel - Modern image annotation tool with improved quality of life features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srijan-paul/RedLabel
author = TzuTa Lin, Fork Maintainers
license = MIT

[options]
python_requires = >=3.8
install_requires =
    PyQt5>=5.14.0
    lxml>=4.6.0

[options.entry_points]
console_scripts =
    redlabel = redlabel:main
gui_scripts =
    redlabel-gui = redlabel:main
